objects/Quote_Clone__c.object
<CustomObject>
    <description>A clone of a corresponding Quote record. For use in portals.</description>
    <fields>
        <fullName>AS__c</fullName>
        <formula>TRIM(Opportunity__r.Ops_Contact__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Ops_Contact__r.LastName)</formula>
        <label>AS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_To_Be_Applied__c</fullName>
        <label>Amount Authorized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BDL_Email__c</fullName>
        <formula>BDL_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDL Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDL_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDL Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDL_Phone__c</fullName>
        <formula>BDL_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDL Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Postal_Code__c</fullName>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street__c</fullName>
        <label>Bill To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blended_MMU__c</fullName>
        <label>Blended MMU%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Card_Billing_City__c</fullName>
        <label>Card Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Billing_Country__c</fullName>
        <label>Card Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Billing_Postal_Code__c</fullName>
        <label>Card Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Billing_State__c</fullName>
        <label>Card Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Billing_Street__c</fullName>
        <label>Card Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Expiration_Month__c</fullName>
        <label>Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Expiration_Year__c</fullName>
        <label>Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Name__c</fullName>
        <description>The name of the credit card holder as it appears on the credit card.</description>
        <inlineHelpText>The name of the credit card holder as it appears on the credit card.</inlineHelpText>
        <label>Card Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Info_Cleared_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Card Info Cleared By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Clones2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Info_Cleared_Date_Time__c</fullName>
        <label>Card Info Cleared Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quote Clones</relationshipLabel>
        <relationshipName>Quote_Clones</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country_Shipping_To__c</fullName>
        <label>Country Shipping To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <formula>TEXT( Opportunity__r.Credit_Terms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Destination_Country__c</fullName>
        <formula>Opportunity__r.Final_Destination_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Destination Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Fees__c</fullName>
        <label>Freight Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handling_Fees_Y_N__c</fullName>
        <label>Handling Fees? (Y/N)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Shipping_To__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handling_Fees__c</fullName>
        <label>Handling Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Entry_of_S_H_Fees__c</fullName>
        <label>Manual Entry of S &amp; H Fees?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Shipping_To__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote Clones</relationshipLabel>
        <relationshipName>Quote_Clones</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <formula>IF(Source_Record__r.RecordTypeId &lt;&gt; &apos;012500000009pF2&apos;  || Source_Record__r.RecordTypeId &lt;&gt; &apos;012500000009gHG&apos;  , Contract_Total__c , Source_Record__r.Order_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Tax__c</fullName>
        <label>Overall Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <formula>Opportunity__r.Ops_Contact__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Ops_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <formula>Opportunity__r.PO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_100,FIND(&quot;.com&quot;,$Api.Enterprise_Server_URL_100)+4)+&quot;secur/login_portal.jsp?orgId=&quot;&amp; $Organization.Id &amp;&quot;&amp;portalid=060W00000004cJT&amp;retURL=/apex/QuoteCreditCardEntryPage?id=&quot;&amp;Id, Opportunity_Name__c, &quot;_blank&quot;)</formula>
        <label>Portal Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_By_Email__c</fullName>
        <formula>Prepared_by__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepared By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_By_First_Name__c</fullName>
        <formula>Prepared_by__r.FirstName</formula>
        <label>Prepared By First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_By_Phone__c</fullName>
        <formula>Prepared_by__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepared By Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_For_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepared For Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_For_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prepared For Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepared_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prepared by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Clones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_With_Handling_Fees__c</fullName>
        <label>Products With Handling Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Products_With_Shipping_Fees__c</fullName>
        <label>Products With Shipping Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <label>Quote Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <formula>Source_Record__r.QuoteNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <label>Quote Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Quote finalized - Payment Link Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quoted_On__c</fullName>
        <label>Quoted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Range_for_Handling_Fees__c</fullName>
        <label>Range for Handling Fees</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Handling_Fees_Y_N__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Amount_To_Be_Applied__c</fullName>
        <label>Second Amount Authorized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Bill_To_City__c</fullName>
        <label>Second Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Bill_To_Country__c</fullName>
        <label>Second Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Bill_To_Postal_Code__c</fullName>
        <label>Second Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Bill_To_State__c</fullName>
        <label>Second Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Bill_To_Street__c</fullName>
        <label>Second Bill To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Card_Expiration_Month__c</fullName>
        <label>Second Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Card_Expiration_Year__c</fullName>
        <label>Second Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Card_Holder_Name__c</fullName>
        <label>Second Card Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Card_Number__c</fullName>
        <label>Second Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Shipping_To__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <label>Shipping Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Fees__c</fullName>
        <label>Shipping Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Shipping_To__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Street_1__c</fullName>
        <label>Shipping Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_2__c</fullName>
        <label>Shipping Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_ID__c</fullName>
        <formula>CASESAFEID( Source_Record__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Record</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Clones</relationshipLabel>
        <relationshipName>Quote_Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_Date_Time__c</fullName>
        <label>Submitted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exempt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_on_Handling__c</fullName>
        <label>Tax on Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_on_Merchandise__c</fullName>
        <label>Tax on Merchandise</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_on_Shipping__c</fullName>
        <label>Tax on Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_To_Be_Applied__c</fullName>
        <formula>Amount_To_Be_Applied__c + Second_Amount_To_Be_Applied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount To Be Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_ELC__c</fullName>
        <label>Total ELC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>RH Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Contract_Total__c</columns>
        <columns>Quoted_On__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CON_Business_Administrator_Quote_Clone</fullName>
        <filterScope>Queue</filterScope>
        <label>CON Business Administrator</label>
        <queue>CON_Business_Administrator</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_Quote_Clone</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_RH_Quotes</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My RH Quotes</label>
    </listViews>
    <nameField>
        <label>RH Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RH Quotes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Amounts_To_Be_Applied_Dont_Exceed_Total</fullName>
        <active>true</active>
        <description>Ensures that the two amounts to be applied do not exceed the Contract Total.</description>
        <errorConditionFormula>Amount_To_Be_Applied__c + Second_Amount_To_Be_Applied__c &gt; Contract_Total__c</errorConditionFormula>
        <errorMessage>The two Amounts To Be Applied cannot exceed the contract total. Please change the Amounts to be Applied</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Card_Number_is_in_a_Valid_Format</fullName>
        <active>true</active>
        <description>Ensures that the Card Number is a Master Card, Visa or American Express card, and is in the correct format for the card.</description>
        <errorConditionFormula>AND
(
    NOT(LEFT(Card_Number__c,2) = &quot;34&quot;),
    NOT(LEFT(Card_Number__c,2) = &quot;37&quot;),
    NOT(LEFT(Card_Number__c,1) = &quot;4&quot;),
    NOT(LEFT(Card_Number__c,1) = &quot;5&quot;),
    OR
    (
        AND
        (
            LEFT(Card_Number__c,1) = &quot;3&quot;,
            NOT(LEN(Card_Number__c) = 15)
        ),
        AND
        (
            OR
            (
                LEFT(Card_Number__c,1) = &quot;4&quot;,
                LEFT(Card_Number__c,1) = &quot;5&quot;
            ),
            NOT(LEN(Card_Number__c) = 16)
        )
    )
)</errorConditionFormula>
        <errorDisplayField>Card_Number__c</errorDisplayField>
        <errorMessage>Credit card number must be a valid Master Card, Visa or American Express card number.</errorMessage>
    </validationRules>
</CustomObject>